Minor changes in README and css transition on demo tabs

--- a/src/demo/14.html
+++ b/src/demo/14.html
@@ -20,7 +20,7 @@
 
       <h1>Grid card</h1>
       <p>The <code>.bfg-card</code> block can be added at different levels of the grid.</p>
-      <p>Using the selector <code>.bfg.bfg-card</code> tells that the <code>.bfg</code> block contains cards elements (content, header and action) that are not direct children of the <code>.bfg-card</code> block.</p>
+      <p>Using the markup <code>.bfg.bfg-card</code> tells that the <code>.bfg</code> block contains cards elements (content, header and action) that are not direct children of the <code>.bfg-card</code> block.</p>
       <p>This allows you to define a default look and feel for all cards and lets you customize some of them, using the different <code>.bfg-card--*</code> modifiers.</p>
 
     </div>
