--- a/src/demo/5.html
+++ b/src/demo/5.html
@@ -19,7 +19,7 @@
     <div class="demo-layout__readme">
 
       <h1>Chained grid</h1>
-      <p>To chain grids, use selector <code>.bfg__box.bfg</code> to treat a <code>.bfg__box</code> element as a <code>.bfg</code> block too.</p>
+      <p>To chain grids, use markup <code>.bfg__box.bfg</code> to treat a <code>.bfg__box</code> element as a <code>.bfg</code> block too.</p>
       <p>In this demo, we use a main column grid and chained row grids. With this technique, each row can have a different height.</p>
 
     </div>
