Add demo for responsive grid

--- a/src/demo.html
+++ b/src/demo.html
@@ -64,6 +64,7 @@
       <a href="demo/13.html"></a>
       <a href="demo/14.html"></a>
       <a href="demo/15.html"></a>
+      <a href="demo/16.html"></a>
     </nav>
   </main>
 
