--- a/src/demo/10.html
+++ b/src/demo/10.html
@@ -18,49 +18,59 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Box size in percent</h1>
-      <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
-      <p>The total size available for each line is 12.</p>
+      <h1>Mixing chained and nested grids</h1>
+      <p>Works too!</p>
+      <p>Notice that if you use <code>.bfg--gap</code> modifier, you'll need to add <code>.bfg__box--nopad</code> modifier on the parent <code>.bfg__box</code> element of any nested grid.</p>
 
     </div>
   </div>
-  <pre class="demo-layout__output demo-layout__output--gray">
+  <pre class="demo-layout__output">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--row bfg--gap bfg--wrap">
-        <div class="bfg__box bfg__box--12"><b></b></div>
+      <div class="bfg bfg--col bfg--gap">
+        <div class="bfg__box bfg__box--6 bfg bfg--row"><!-- chained -->
 
-        <div class="bfg__box bfg__box--11"><b></b></div>
-        <div class="bfg__box bfg__box--1"><b></b></div>
+          <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- chained -->
 
-        <div class="bfg__box bfg__box--10"><b></b></div>
-        <div class="bfg__box bfg__box--2"><b></b></div>
+            <div class="bfg__box bfg__box--6"></div>
+            <div class="bfg__box bfg__box--6"></div>
 
-        <div class="bfg__box bfg__box--9"><b></b></div>
-        <div class="bfg__box bfg__box--3"><b></b></div>
+          </div>
+          <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+            <div class="bfg bfg--col"><!-- nested -->
 
-        <div class="bfg__box bfg__box--8"><b></b></div>
-        <div class="bfg__box bfg__box--4"><b></b></div>
+              <div class="bfg__box bfg__box--6"></div>
+              <div class="bfg__box bfg__box--6"></div>
 
-        <div class="bfg__box bfg__box--7"><b></b></div>
-        <div class="bfg__box bfg__box--5"><b></b></div>
+            </div>
+          </div>
 
-        <div class="bfg__box bfg__box--6"><b></b></div>
-        <div class="bfg__box bfg__box--6"><b></b></div>
+        </div>
+        <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+
+          <div class="bfg bfg--row"><!-- nested -->
+            <div class="bfg__box bfg__box--6 bfg bfg--col"><!-- chained -->
+
+              <div class="bfg__box bfg__box--6"></div>
+              <div class="bfg__box bfg__box--6"></div>
+
+            </div>
+            <div class="bfg__box bfg__box--6 bfg__box--nopad"><!-- nopad -->
+              <div class="bfg bfg--col"><!-- nested -->
+
+                <div class="bfg__box bfg__box--6"></div>
+                <div class="bfg__box bfg__box--6"></div>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
 
-      <style>
-        .bfg__box b {
-          display: block;
-          box-sizing: border-box;
-          border: 1px solid rgba(255, 255, 255, 0.75);
-          background: dodgerblue;
-          height: 100%;
-        }
-      </style>
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'direction', 'gridGap']);</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
