--- a/src/demo/12.html
+++ b/src/demo/12.html
@@ -18,32 +18,27 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Remaining space distribution</h1>
-      <p>
-        When the total size of the boxes is less than <code>12</code>, you can distribute the remaining space using:
-        <code>.bfg--main-center</code>, <code>.bfg--main-end</code>,
-        <code>.bfg--main-between</code> or <code>.bfg--main-around</code>.
-      </p>
+      <h1>Box fit</h1>
+      <p>Use <code>.bfg__box--fit</code> modifier to indicate that a <code>.bfg__box</code> element should not grow or shrink.</p>
+      <p>To see it in action, resize the window.</p>
+      <p>Additionally, you can fix the size in pixels by giving the box the expected <code>width</code> for grid in row direction and <code>height</code> for grid in column direction.</p>
 
     </div>
   </div>
   <pre class="demo-layout__output">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--row bfg--main-between">
-        <div class="bfg__box bfg__box--2"></div>
-        <div class="bfg__box bfg__box--fit" style="background:#FFEBEE;">
-          <i>Fixed box</i>
-        </div>
-        <div class="bfg__box bfg__box--fit" style="background:#FFEBEE;">
-          <i>Fixed box</i>
+      <div class="bfg bfg--row">
+        <div class="bfg__box bfg__box--fit">
+          <b>Box fit!</b>
         </div>
         <div class="bfg__box bfg__box--4"></div>
+        <div class="bfg__box bfg__box--8"></div>
       </div>
 
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight', 'direction']);</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
