--- a/src/demo/5.html
+++ b/src/demo/5.html
@@ -10,7 +10,7 @@
 
   <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../styles/demo.scss">
-  <link rel="stylesheet" href="../lib/bem-flex-grid.ie11.scss">
+  <link rel="stylesheet" href="5.scss">
 
   <script src="../script.ts"></script>
 </head>
@@ -18,33 +18,40 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Chained grid</h1>
-      <p>To chain grids, use markup <code>.bfg__box.bfg</code> to treat a <code>.bfg__box</code> element as a <code>.bfg</code> block too.</p>
-      <p>In this demo, we use a main column grid and chained row grids. With this technique, each row can have a different height.</p>
+      <h1>Responsive</h1>
+      <p>In this demo, the <code>.bfg__box</code> are displayed onto:</p>
+      <ul>
+        <li>one line on all screen sizes (even greater than 1200px)</li>
+        <li>two lines on extra large screen (until 1200px)</li>
+        <li>three lines on large screen (until 992px)</li>
+      </ul>
+      <p>Change the window size to see the responsiveness in action.</p>
 
     </div>
   </div>
   <pre class="demo-layout__output">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--col">
+      <div class="bfg bfg--row bfg--wrap
+        bfg--xl-lines-2
+        bfg--lg-lines-3">
 
-        <!-- Chained grid starts here, on the `.bfg__box` element -->
-        <div class="bfg__box bfg__box--3 bfg bfg--row">
-          <div class="bfg__box bfg__box--6"></div>
-          <div class="bfg__box bfg__box--6"></div>
-        </div>
+        <div class="bfg__box bfg__box--4
+          bfg__box--xl-6
+          bfg__box--lg-12"></div>
 
-        <!-- Chained grid -->
-        <div class="bfg__box bfg__box--9 bfg bfg--row">
-          <div class="bfg__box bfg__box--12"></div>
-        </div>
+        <div class="bfg__box bfg__box--4
+          bfg__box--xl-6
+          bfg__box--lg-12"></div>
 
+        <div class="bfg__box bfg__box--4
+          bfg__box--xl-12
+          bfg__box--lg-12"></div>
       </div>
 
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'gridGap']);</script>
 </body>
 </html>
