--- a/src/demo/7.html
+++ b/src/demo/7.html
@@ -18,28 +18,38 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Chained grid in the same direction</h1>
-      <p>Works too!</p>
+      <h1>Nested grid</h1>
+      <p>To nest grids, include a <code>.bfg</code> block inside a <code>.bfg__box</code> element.</p>
+      <p>In this demo, we use a main column grid and nested row grids. With this technique, each row can have a different height.</p>
 
     </div>
   </div>
   <pre class="demo-layout__output">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--row">
-        <div class="bfg__box bfg__box--4"></div>
-        <div class="bfg__box bfg__box--4 bfg bfg--row">
+      <div class="bfg bfg--col">
+        <div class="bfg__box bfg__box--3">
 
-          <div class="bfg__box bfg__box--6"></div>
-          <div class="bfg__box bfg__box--6"></div>
+          <!-- Nested grid starts here, inside the `.bfg__box` element -->
+          <div class="bfg bfg--row">
+            <div class="bfg__box bfg__box--6"></div>
+            <div class="bfg__box bfg__box--6"></div>
+          </div>
 
         </div>
-        <div class="bfg__box bfg__box--4"></div>
+        <div class="bfg__box bfg__box--9">
+
+          <!-- Nested grid -->
+          <div class="bfg bfg--row">
+            <div class="bfg__box bfg__box--12"></div>
+          </div>
+
+        </div>
       </div>
 
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight', 'direction']);</script>
 </body>
 </html>
