--- a/src/demo/8.html
+++ b/src/demo/8.html
@@ -18,7 +18,7 @@
   <div class="demo-layout__desc">
     <div class="demo-layout__readme">
 
-      <h1>Nested grid in the same direction</h1>
+      <h1>Chained grid in the same direction</h1>
       <p>Works too!</p>
 
     </div>
@@ -28,12 +28,10 @@
 
       <div class="bfg bfg--row">
         <div class="bfg__box bfg__box--4"></div>
-        <div class="bfg__box bfg__box--4">
+        <div class="bfg__box bfg__box--4 bfg bfg--row">
 
-          <div class="bfg bfg--row">
-            <div class="bfg__box bfg__box--6"></div>
-            <div class="bfg__box bfg__box--6"></div>
-          </div>
+          <div class="bfg__box bfg__box--6"></div>
+          <div class="bfg__box bfg__box--6"></div>
 
         </div>
         <div class="bfg__box bfg__box--4"></div>
@@ -42,6 +40,6 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight', 'direction']);</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions();</script>
 </body>
 </html>
