Add links between "class" and "attr" implem

--- a/src/demo-attr/14.html
+++ b/src/demo-attr/14.html
@@ -37,6 +37,7 @@
       <p>Then you can add an header to the card using the optional <code>.bfg-card__header</code> element and one or more actions to the header using the optional <code>.bfg-card__action</code> element.</p>
       <p>By default, the card's elements do not have any look and feel. Use the <code>.bfg-card--*</code> modifiers to adapt the appearance of each block to your needs.</p>
 
+      <p><a href="../demo-class/14.html">Compare with "class" implementation</a></p>
     </div>
   </div>
 
