--- a/src/demo-attr/2.html
+++ b/src/demo-attr/2.html
@@ -23,6 +23,7 @@
       <p>To define the <code>.bfg__box</code> element size, use <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
       <p>The total size available for each line is 12.</p>
 
+      <p><a href="../demo-class/2.html">Compare with "class" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output">
