--- a/src/demo-attr/4.html
+++ b/src/demo-attr/4.html
@@ -25,6 +25,7 @@
       <p>With this technique, all the rows will have the same height.</p>
       <p>The same pattern applies to the markup <code>.bfg.bfg--col.bfg--wrap</code>.</p>
 
+      <p><a href="../demo-class/4.html">Compare with "class" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output">
