--- a/src/demo-class/12.html
+++ b/src/demo-class/12.html
@@ -23,6 +23,7 @@
       <p>To see it in action, resize the window.</p>
       <p>Additionally, you can fix the size in pixels by giving the box the expected <code>width</code> for grid in row direction and <code>height</code> for grid in column direction.</p>
 
+      <p><a href="../demo-attr/12.html">Compare with "attr" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output">
