--- a/src/demo-class/13.html
+++ b/src/demo-class/13.html
@@ -25,6 +25,7 @@
         <code>.bfg--main-between</code> or <code>.bfg--main-around</code>.
       </p>
 
+      <p><a href="../demo-attr/13.html">Compare with "attr" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output">
