--- a/src/demo-class/5.html
+++ b/src/demo-class/5.html
@@ -27,6 +27,7 @@
       </ul>
       <p>Change the window size to see the responsiveness in action.</p>
 
+      <p><a href="../demo-attr/5.html">Compare with "attr" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output">
