--- a/src/demo-class/6.html
+++ b/src/demo-class/6.html
@@ -22,6 +22,7 @@
       <p>To chain grids, use markup <code>.bfg__box.bfg</code> to treat a <code>.bfg__box</code> element as a <code>.bfg</code> block too.</p>
       <p>In this demo, we use a main column grid and chained row grids. With this technique, each row can have a different height.</p>
 
+      <p><a href="../demo-attr/6.html">Compare with "attr" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output">
