--- a/src/demo-attr/11.html
+++ b/src/demo-attr/11.html
@@ -22,6 +22,7 @@
       <p>Define the <code>.bfg__box</code> element size using <code>.bfg__box--1</code>, <code>.bfg__box--2</code>, ..., <code>.bfg__box--11</code>, <code>.bfg__box--12</code> modifiers.</p>
       <p>The total size available for each line is 12.</p>
 
+      <p><a href="../demo-class/11.html">Compare with "class" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output demo-layout__output--gray">
