--- a/src/demo-attr/3.html
+++ b/src/demo-attr/3.html
@@ -21,6 +21,7 @@
       <h1>Multiple lines</h1>
       <p>Allow <code>.bfg__box</code> elements to wrap as needed onto multiple lines, using the optional <code>.bfg--wrap</code> modifier.</p>
 
+      <p><a href="../demo-class/3.html">Compare with "class" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output">
