--- a/src/demo-attr/9.html
+++ b/src/demo-attr/9.html
@@ -21,6 +21,7 @@
       <h1>Nested grid in the same direction</h1>
       <p>Works too!</p>
 
+      <p><a href="../demo-class/9.html">Compare with "class" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output">
