--- a/src/demo-class/15.html
+++ b/src/demo-class/15.html
@@ -23,6 +23,7 @@
       <p>Using the markup <code>.bfg.bfg-card</code> tells that the <code>.bfg</code> block contains cards elements (content, header and action) that are not direct children of the <code>.bfg-card</code> block.</p>
       <p>This allows you to define a default look and feel for all cards and lets you customize some of them, using the different <code>.bfg-card--*</code> modifiers.</p>
 
+      <p><a href="../demo-attr/15.html">Compare with "attr" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output demo-layout__output--gray">
