--- a/src/demo-class/16.html
+++ b/src/demo-class/16.html
@@ -21,6 +21,7 @@
       <h1>Dashboard</h1>
       <p>Bem flex grid perfectly fits to the window size in both width and height and lets you design fixed dashboard.</p>
 
+      <p><a href="../demo-attr/16.html">Compare with "attr" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output demo-layout__output--gray">
