--- a/src/demo-class/8.html
+++ b/src/demo-class/8.html
@@ -21,6 +21,7 @@
       <h1>Chained grid in the same direction</h1>
       <p>Works too!</p>
 
+      <p><a href="../demo-attr/8.html">Compare with "attr" implementation</a></p>
     </div>
   </div>
   <pre class="demo-layout__output">
