Remove "demo-attr.html"

--- a/index-template.html
+++ b/index-template.html
@@ -28,8 +28,7 @@
   <header class="docs-navbar docs-navbar--front">
     <div class="docs-container">
       <a href="./" class="docs-navbar__link">doc</a>
-      <a href="demo-class.html" class="docs-navbar__link">demo class</a>
-      <a href="demo-attr.html" class="docs-navbar__link">demo attr</a>
+      <a href="demo.html" class="docs-navbar__link">demo</a>
       <a href="https://github.com/avine/bem-flex-grid/" class="docs-navbar__link">github</a>
     </div>
   </header>
