--- a/src/demo.html
+++ b/src/demo.html
@@ -6,14 +6,14 @@
 
   <title>Demo - Bem Flex Grid</title>
 
-  <link rel="shortcut icon" href="/bem-flex-grid/favicon.d6231ddc.ico">
+  <link rel="shortcut icon" href="favicon.ico">
 
-  <link rel="stylesheet" href="/bem-flex-grid/demo.38c54a6f.css">
-  <link rel="stylesheet" href="/bem-flex-grid/docs.dae5b612.css">
+  <link rel="stylesheet" href="styles/demo.scss">
+  <link rel="stylesheet" href="styles/docs.scss">
 
-  <link rel="stylesheet" href="/bem-flex-grid/bem-flex-grid-class.48cc7edb.css">
+  <link rel="stylesheet" href="lib/bem-flex-grid-class.scss">
 
-  <script src="/bem-flex-grid/script.66840ed7.js"></script>
+  <script src="script.ts"></script>
 </head>
 <body>
   <div class="docs-navbar docs-navbar--back">
@@ -24,8 +24,7 @@
   <header class="docs-navbar docs-navbar--front">
     <div class="docs-container">
       <a href="./" class="docs-navbar__link">doc</a>
-      <a href="/bem-flex-grid/demo-class.html" class="docs-navbar__link">demo class</a>
-      <a href="/bem-flex-grid/demo-attr.html" class="docs-navbar__link">demo attr</a>
+      <a href="demo.html" class="docs-navbar__link">demo</a>
       <a href="https://github.com/avine/bem-flex-grid/" class="docs-navbar__link">github</a>
     </div>
   </header>
@@ -50,23 +49,23 @@
 
   <main class="docs-container">
     <nav class="docs-showcase">
-      <a href="/bem-flex-grid/demo-attr/1.html"></a>
-      <a href="/bem-flex-grid/demo-attr/2.html"></a>
-      <a href="/bem-flex-grid/demo-attr/3.html"></a>
-      <a href="/bem-flex-grid/demo-attr/4.html"></a>
-      <a href="/bem-flex-grid/demo-attr/5.html"></a>
-      <a href="/bem-flex-grid/demo-attr/6.html"></a>
-      <a href="/bem-flex-grid/demo-attr/7.html"></a>
-      <a href="/bem-flex-grid/demo-attr/8.html"></a>
-      <a href="/bem-flex-grid/demo-attr/9.html"></a>
-      <a href="/bem-flex-grid/demo-attr/10.html"></a>
-      <a href="/bem-flex-grid/demo-attr/11.html"></a>
-      <a href="/bem-flex-grid/demo-attr/12.html"></a>
-      <a href="/bem-flex-grid/demo-attr/13.html"></a>
-      <a href="/bem-flex-grid/demo-attr/14.html"></a>
-      <a href="/bem-flex-grid/demo-attr/15.html"></a>
-      <a href="/bem-flex-grid/demo-attr/16.html"></a>
-      <!--<a href="demo-attr/17.html"></a>-->
+      <a href="demo-class/1.html"></a>
+      <a href="demo-class/2.html"></a>
+      <a href="demo-class/3.html"></a>
+      <a href="demo-class/4.html"></a>
+      <a href="demo-class/5.html"></a>
+      <a href="demo-class/6.html"></a>
+      <a href="demo-class/7.html"></a>
+      <a href="demo-class/8.html"></a>
+      <a href="demo-class/9.html"></a>
+      <a href="demo-class/10.html"></a>
+      <a href="demo-class/11.html"></a>
+      <a href="demo-class/12.html"></a>
+      <a href="demo-class/13.html"></a>
+      <a href="demo-class/14.html"></a>
+      <a href="demo-class/15.html"></a>
+      <a href="demo-class/16.html"></a>
+      <!--<a href="demo-class/17.html"></a>-->
     </nav>
   </main>
 
