--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,7 @@
   <header class="docs-navbar docs-navbar--front">
     <div class="docs-container">
       <a href="./" class="docs-navbar__link">doc</a>
-      <a href="demo-class.html" class="docs-navbar__link">demo class</a>
-      <a href="demo-attr.html" class="docs-navbar__link">demo attr</a>
+      <a href="demo.html" class="docs-navbar__link">demo</a>
       <a href="https://github.com/avine/bem-flex-grid/" class="docs-navbar__link">github</a>
     </div>
   </header>
@@ -91,7 +90,7 @@
 &lt;/html&gt;
 </code></pre>
 <blockquote>
-<p>To learn more about the features, check out the <a href="https://avine.github.io/bem-flex-grid/demo-class.html">demos</a>.</p>
+<p>To learn more about the features, check out the <a href="https://avine.github.io/bem-flex-grid/demo.html">demos</a>.</p>
 </blockquote>
 <h2>Installation and usage</h2>
 <p>Install the package from <a href="https://www.npmjs.com/package/bem-flex-grid">NPM</a> (or Yarn) and insert the link tag into your web pages or use Sass import for more customization.</p>
