--- a/src/index.html
+++ b/src/index.html
@@ -162,8 +162,12 @@
 ├─ dist
 │  ├─ bem-flex-grid-attr.css
 │  ├─ bem-flex-grid-attr.min.css
+│  ├─ bem-flex-grid-attr.ie11.css
+│  ├─ bem-flex-grid-attr.ie11.min.css
 │  ├─ bem-flex-grid-class.css
-│  └─ bem-flex-grid-class.min.css
+│  ├─ bem-flex-grid-class.min.css
+│  ├─ bem-flex-grid-class.ie11.css
+│  └─ bem-flex-grid-class.ie11.min.css
 └─ src
    └─ lib
       ├─ attr
@@ -176,11 +180,12 @@
       │  └─ _mixins.scss
       ├─ _variables.scss
       ├─ bem-flex-grid-attr.scss
-      └─ bem-flex-grid-class.scss
+      ├─ bem-flex-grid-attr.ie11.scss
+      ├─ bem-flex-grid-class.scss
+      └─ bem-flex-grid-class.ie11.scss
 </code></pre>
 <h3>Browser support</h3>
-<p>Bem-flex-grid 2 supports the latest, stable releases of all major browsers, including Microsoft Edge on Windows.</p>
-<p>For Internet Explorer 11 compatibility, use <a href="https://www.npmjs.com/package/bem-flex-grid/v/1.2.3">Bem-flex-grid 1</a>.</p>
+<p>Bem-flex-grid supports the latest, stable releases of all major browsers, including Microsoft Internet Explorer 11 and Edge on Windows.</p>
 <h2>API</h2>
 <p>This documentation is based on the class syntax.</p>
 <h3>Grid blocks and elements</h3>
@@ -225,7 +230,7 @@
   &lt;/div&gt;
 &lt;/div&gt;
 </code></pre>
-<p>Finally, using the markup <code>.bfg.bfg-card</code> simply tells that the <code>.bfg</code> <em>block</em> contains cards elements (content, header and action) that are not direct children of the <code>.bfg-card</code> <em>block</em>.</p>
+<p>Finally, using the markup <code>.bfg.bfg-card</code> simply tells that the <code>.bfg</code> <em>block</em> contains cards elements (content, header and actions) that are not direct children of the <code>.bfg-card</code> <em>block</em>.</p>
 <p>This allows you to define a default look and feel for all cards and lets you customize some of them, using the different <code>.bfg-card--*</code> modifiers (you'll see below how to define the card's look and feel).</p>
 <pre><code class="language-html">&lt;!-- global card definition --&gt;
 &lt;div class=&quot;bfg bfg-card bfg-card--primary&quot;&gt;
@@ -831,6 +836,8 @@ npm run build
 # Build HTML documentation (`src/index.html`) from `README.md`
 npm run index
 </code></pre>
+<h3>License</h3>
+<p><a href="https://github.com/avine/bem-flex-grid/blob/master/LICENSE">MIT</a></p>
 
 
   </main>
