--- a/src/demo-attr/16.html
+++ b/src/demo-attr/16.html
@@ -27,7 +27,7 @@
   <pre class="demo-layout__output demo-layout__output--gray">
     <div class="demo-layout__playground">
 
-      <div bfg="col gap" bfg-card="primary">
+      <div bfg="col gap sm-disabled-all" bfg-card="primary">
         <div bfg__box="6">
           <!-- content with header -->
           <header bfg-card__header>Header</header>
