Improve docs css

--- a/src/demo-attr/11.html
+++ b/src/demo-attr/11.html
@@ -62,6 +62,6 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'direction', 'gridGap']);</script>
+  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'gridDirection', 'gridGap']);</script>
 </body>
 </html>
