--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   </div>
   <header class="docs-navbar docs-navbar--front">
     <div class="docs-container">
-      <a href="./" class="docs-navbar__link">doc</a>
+      <a href="./" class="docs-navbar__link docs-navbar__link--active">doc</a>
       <a href="demo.html" class="docs-navbar__link">demo</a>
       <a href="https://github.com/avine/bem-flex-grid/" class="docs-navbar__link">github</a>
     </div>
@@ -51,7 +51,7 @@
     <h2 class="docs-header__subtitle">CSS flex grid, BEM compliant.</h2>
   </header>
 
-  <main class="docs-container">
+  <main class="docs-container docs-container--main">
 
 <h1>bem-flex-grid</h1>
 <p>CSS flex grid, <a href="http://getbem.com/">BEM</a> compliant.</p>
