--- a/src/demo-class/16.html
+++ b/src/demo-class/16.html
@@ -65,7 +65,7 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'direction', 'gridGap']);</script>
+  <script>Demo.viewCode(); Demo.enableActions(['fullWidth', 'gridDirection', 'gridGap']);</script>
 
   <script>
     const ctx = document.querySelectorAll('.demo-chart');
