--- a/src/demo-class/7.html
+++ b/src/demo-class/7.html
@@ -51,6 +51,6 @@
     </div>
   </pre>
 
-  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight', 'direction']);</script>
+  <script>Demo.viewCode(); Demo.fillGrid(); Demo.enableActions(['fullWidth', 'autoHeight', 'gridDirection']);</script>
 </body>
 </html>
