--- a/src/demo.html
+++ b/src/demo.html
@@ -24,12 +24,12 @@
   <header class="docs-navbar docs-navbar--front">
     <div class="docs-container">
       <a href="./" class="docs-navbar__link">doc</a>
-      <a href="demo.html" class="docs-navbar__link">demo</a>
+      <a href="demo.html" class="docs-navbar__link docs-navbar__link--active">demo</a>
       <a href="https://github.com/avine/bem-flex-grid/" class="docs-navbar__link">github</a>
     </div>
   </header>
 
-  <header class="docs-header">
+  <!--<header class="docs-header">
     <div class="bfg bfg--row bfg--main-center bfg--cross-center bfg--box-overflow-visible bfg--sm-disabled">
       <div class="bfg__box bfg__box--fit bfg__box--last">
         <div class="docs-logo">
@@ -45,9 +45,9 @@
       </h1>
     </div>
     <h2 class="docs-header__subtitle">CSS flex grid, BEM compliant.</h2>
-  </header>
+  </header>-->
 
-  <main class="docs-container">
+  <main class="docs-container docs-container--main">
     <nav class="docs-showcase">
       <a href="demo-class/1.html"></a>
       <a href="demo-class/2.html"></a>
