Use "auto-height" and "[N]-lines"

--- a/src/demo-attr/5.html
+++ b/src/demo-attr/5.html
@@ -33,7 +33,7 @@
   <pre class="demo-layout__output">
     <div class="demo-layout__playground">
 
-      <div bfg="row wrap xl-lines-2 lg-lines-3">
+      <div bfg="row wrap xl-2-lines lg-3-lines">
         <div bfg__box="4 xl-6 lg-12"></div>
         <div bfg__box="4 xl-6 lg-12"></div>
         <div bfg__box="4 xl-12 lg-12"></div>
