--- a/src/demo-class/5.html
+++ b/src/demo-class/5.html
@@ -34,8 +34,8 @@
     <div class="demo-layout__playground">
 
       <div class="bfg bfg--row bfg--wrap
-        bfg--xl-lines-2
-        bfg--lg-lines-3">
+        bfg--xl-2-lines
+        bfg--lg-3-lines">
 
         <div class="bfg__box bfg__box--4
           bfg__box--xl-6
