--- a/src/demo-attr/4.html
+++ b/src/demo-attr/4.html
@@ -21,7 +21,7 @@
       <h1>Fixed lines number</h1>
       <p>If you use the markup <code>.bfg.bfg--row.bfg--wrap</code> then <code>.bfg__box</code> elements are placed in the row direction and wrapped onto multiple lines when needed.</p>
       <p>But in this case the total height of all <code>.bfg__box</code> elements might be bigger than the <code>.bfg</code> block height itself!</p>
-      <p>If you know that there's exactly 2 lines of <code>.bfg__box</code> elements, you can constrain them to fit into the <code>.bfg</code> block, by using <code>.bfg--lines-2</code> modifier.</p>
+      <p>If you know that there's exactly 2 lines of <code>.bfg__box</code> elements, you can constrain them to fit into the <code>.bfg</code> block, by using <code>.bfg--2-lines</code> modifier.</p>
       <p>With this technique, all the rows will have the same height.</p>
       <p>The same pattern applies to the markup <code>.bfg.bfg--col.bfg--wrap</code>.</p>
 
@@ -31,7 +31,7 @@
   <pre class="demo-layout__output">
     <div class="demo-layout__playground">
 
-      <div bfg="row wrap lines-2">
+      <div bfg="row wrap 2-lines">
         <div bfg__box="6"></div>
         <div bfg__box="6"></div>
         <div bfg__box="12"></div>
