--- a/src/index.html
+++ b/src/index.html
@@ -309,16 +309,18 @@
 </code></pre>
 <h4>Number of lines: <code>.bfg--[B][N]-lines</code></h4>
 <p><strong>[B]</strong> Breakpoint: <code>xl-</code>, <code>lg-</code>, <code>sm-</code>, <code>xs-</code> or none.</p>
-<p><strong>[N]</strong> Number: <code>2</code>, <code>3</code> or <code>4</code>.</p>
+<p><strong>[N]</strong> Number: <code>2</code>, <code>3</code>, <code>4</code> or <code>5</code>.</p>
 <p>As said above, if you use the markup <code>.bfg.bfg--row.bfg--wrap</code> then <code>.bfg__box</code> elements are placed in the row direction and wrapped onto multiple lines when needed.</p>
 <p>But in this case the total height of all <code>.bfg__box</code> elements might be bigger than the <code>.bfg</code> block height itself!</p>
 <p>If you know that there's exactly 2 lines of <code>.bfg__box</code> elements, you can constrain them to fit into the <code>.bfg</code> block, by using <code>.bfg--2-lines</code> modifier.</p>
-<p>In the same way, use <code>.bfg--3-lines</code> or <code>.bfg--4-lines</code> modifiers to fit into exactly 3 or 4 lines respectively.</p>
+<p>In the same way, use <code>.bfg--3-lines</code>, <code>.bfg--4-lines</code> or <code>.bfg--5-lines</code> modifiers to fit into exactly 3, 4 or 5 lines respectively.</p>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--row bfg--wrap bfg--2-lines&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--row bfg--wrap bfg--3-lines&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--row bfg--wrap bfg--4-lines&quot;&gt;...&lt;/div&gt;
+</code></pre>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--row bfg--wrap bfg--5-lines&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <blockquote>
 <p>Notice that all the rows will have the same height.</p>
@@ -329,6 +331,8 @@
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--wrap bfg--3-lines&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--wrap bfg--4-lines&quot;&gt;...&lt;/div&gt;
+</code></pre>
+<pre><code class="language-html">&lt;div class=&quot;bfg bfg--col bfg--wrap bfg--5-lines&quot;&gt;...&lt;/div&gt;
 </code></pre>
 <blockquote>
 <p>Notice that all the columns will have the same width.</p>
@@ -747,6 +751,7 @@ $bfg-gap: 2rem;
 <li><code>.bfg--2-lines</code>, <code>.bfg--xl-2-lines</code>, <code>.bfg--lg-2-lines</code>, <code>.bfg--sm-2-lines</code>, <code>.bfg--xs-2-lines</code></li>
 <li><code>.bfg--3-lines</code>, <code>.bfg--xl-3-lines</code>, <code>.bfg--lg-3-lines</code>, <code>.bfg--sm-3-lines</code>, <code>.bfg--xs-3-lines</code></li>
 <li><code>.bfg--4-lines</code>, <code>.bfg--xl-4-lines</code>, <code>.bfg--lg-4-lines</code>, <code>.bfg--sm-4-lines</code>, <code>.bfg--xs-4-lines</code></li>
+<li><code>.bfg--5-lines</code>, <code>.bfg--xl-5-lines</code>, <code>.bfg--lg-5-lines</code>, <code>.bfg--sm-5-lines</code>, <code>.bfg--xs-5-lines</code></li>
 </ul>
 <p><em>Gap:</em></p>
 <ul>
@@ -852,6 +857,7 @@ $bfg-gap: 2rem;
 <li><code>bfg=&quot;2-lines | xl-2-lines | lg-2-lines | sm-2-lines | xs-2-lines&quot;</code></li>
 <li><code>bfg=&quot;3-lines | xl-3-lines | lg-3-lines | sm-3-lines | xs-3-lines&quot;</code></li>
 <li><code>bfg=&quot;4-lines | xl-4-lines | lg-4-lines | sm-4-lines | xs-4-lines&quot;</code></li>
+<li><code>bfg=&quot;5-lines | xl-5-lines | lg-5-lines | sm-5-lines | xs-5-lines&quot;</code></li>
 </ul>
 <p><em>Gap:</em></p>
 <ul>
