`variables.scss` minor changes

--- a/src/index.html
+++ b/src/index.html
@@ -157,8 +157,8 @@
 <pre><code class="language-scss">@import &quot;[PATH_TO]/node_modules/bem-flex-grid/src/lib/bem-flex-grid-attr.scss&quot;;
 </code></pre>
 <h3>Package content</h3>
-<pre><code class="language-text">bem-flex-grid
-├─ dist
+<pre><code class="language-text">bem-flex-grid/
+├─ dist/
 │  ├─ bem-flex-grid-attr.css
 │  ├─ bem-flex-grid-attr.min.css
 │  ├─ bem-flex-grid-attr.ie11.css
@@ -167,13 +167,13 @@
 │  ├─ bem-flex-grid-class.min.css
 │  ├─ bem-flex-grid-class.ie11.css
 │  └─ bem-flex-grid-class.ie11.min.css
-└─ src
-   └─ lib
-      ├─ attr
+└─ src/
+   └─ lib/
+      ├─ attr/
       │  ├─ _card.scss
       │  ├─ _core.scss
       │  └─ _mixins.scss
-      ├─ class
+      ├─ class/
       │  ├─ _card.scss
       │  ├─ _core.scss
       │  └─ _mixins.scss
@@ -665,13 +665,13 @@ $bfg-breakpoints: (
   xl: 1200px
 ) !default;
 
-$bfg-gap: 1rem !default;
+$bfg-gap: 1.5rem !default;
 
 $bfg-card-margin: 1.5rem !default;
 
-$bfg-card-padding: 0.5rem !default;
+$bfg-card-padding: 1rem !default;
 
-$bfg-card-header-height: 2rem !default;
+$bfg-card-header-height: 2.5rem !default;
 
 $bfg-card-primary: (
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.075),
