--- a/src/demo-class/16.html
+++ b/src/demo-class/16.html
@@ -27,7 +27,7 @@
   <pre class="demo-layout__output demo-layout__output--gray">
     <div class="demo-layout__playground">
 
-      <div class="bfg bfg--col bfg--gap bfg--sm-disabled-all bfg-card bfg-card--primary">
+      <div class="bfg bfg--col bfg--gap bfg--lg-nogap bfg--sm-disabled-all bfg-card bfg-card--primary">
         <div class="bfg__box bfg__box--6">
           <!-- content with header -->
           <div class="bfg-card__action"><a href="#action-2">Action 2</a></div>
